Upload em NetworkService atualizado

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,41 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
+
+    <TextView
+        android:id="@+id/texto_carregar"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:text="RESULTADO AQUI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="20dp"/>
+
     <Button
         android:id="@+id/carregar"
         android:text="Carregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/texto_carregar"
         android:onClick="loadData"/>
+
+    <EditText
+        android:id="@+id/texto_salvar"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"/>
+
+    <Button
+        android:id="@+id/salvar"
+        android:text="Salvar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/texto_salvar"
+        android:layout_alignParentRight="true"
+        android:onClick="saveData"/>
 
     <Button
         android:id="@+id/parar"
@@ -26,13 +53,5 @@
         android:layout_centerVertical="true"
         android:layout_below="@+id/carregar"
         android:onClick="stopServices"/>
-
-    <TextView
-        android:id="@+id/texto_resultado"
-        android:text="RESULTADO AQUI"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/carregar"
-        android:layout_marginBottom="20dp"/>
 
 </RelativeLayout>
